--- a/1. Amplitude Encoding.ipynb
+++ b/1. Amplitude Encoding.ipynb
@@ -108,7 +108,7 @@
    "id": "9a23db7f",
    "metadata": {},
    "source": [
-    "The data in the second and third columns is difficult to interpret due to the huge range of the values. I decided to preprocess the data in the following way: the first column was divided by 1000 so it does not dominate the training by putting it on roughly the same order of magnitude as the other features. The log of the second and third columns was taken so their values would also be within a more reasonable range. Since the fourth column had values between 0 and 90, it appeared to be angles, so the sin was taken of this column. The last column, the labels, was changed from 0 and 1 to -1 and 1 to help with classification, as the expectation value of the Pauli Z taken later will output values between -1 and 1."
+    "The data in the second and third columns are difficult to interpret due to the huge range of the values. I decided to preprocess the data in the following way: the first column was divided by 1000 so it does not dominate the training by putting it on roughly the same order of magnitude as the other features. The log of the second and third columns was taken so their values would also be within a more reasonable range. Since the fourth column had values between 0 and 90, it appeared to be angles, so the sin was taken of this column. The last column, the labels, was changed from 0 and 1 to -1 and 1 to help with classification, as the expectation value of the Pauli Z taken later will output values between -1 and 1."
    ]
   },
   {
