--- a/3. Dense Angle Encoding.ipynb
+++ b/3. Dense Angle Encoding.ipynb
@@ -1,5 +1,13 @@
 {
  "cells": [
+    {
+   "cell_type": "markdown",
+   "id": "732321ef",
+   "metadata": {},
+   "source": [
+    "The dense angle encoding is nearly the same as the angle encoding, but the gates in state_preparation() will change and the number of qubits required is 2 instead of 4."
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": 70,
